overflow-x fixed

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -69,6 +69,13 @@ body {
   white-space: nowrap;
   line-height: 30px; /* Vertically center the text there */
 }
+    /*class row correction. 
+        ( See \wwwroot\lib\bootstrap\dist\css\bootstrap.min.css.map )
+    */
+    .footer .row {
+        margin-right: 0px !important;
+        margin-left: 0px !important;
+    }
 
 .list-unstyled{
     list-style: none;
